# big-back

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  vcpkg-configuration.json
.cache/clangd/index/: main.cpp.70F08273FEAA2DAB.idx
src/: main.cpp
